cabal-version:       2.4
name:                webgear-example-users
version:             0.2.1
description:         Please see the README at <https://github.com/haskell-webgear/webgear-example-users#readme>
homepage:            https://github.com/haskell-webgear/webgear-example-users#readme
bug-reports:         https://github.com/haskell-webgear/webgear-example-users/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear-example-users

executable users
  default-language:   Haskell2010
  build-depends:      aeson                 >=1.4 && <1.6
                    , base                  >=4.12.0.0 && <5
                    , bytestring            ==0.10.*
                    , hashable              >=1.2.7.0 && <1.4
                    , http-types            ==0.12.*
                    , mtl                   ==2.2.*
                    , text                  ==1.2.*
                    , time                  >=1.8.0.2 && <1.10
                    , unordered-containers  ==0.2.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  hs-source-dirs:     src


